traces/bug_766.txt
src/fflib/problem.cpp:1590: error: DEAD_STORE
  The value written to &tv (type Fem2D::Tet const *) is never used.
Showing all 1 steps of the trace


src/fflib/problem.cpp:1590:21: Write of unused value
1588.                   if(same)
1589.                   {
1590.                       tv=tu;
                            ^
1591.                       outsidev=outsideu;
1592.                       Ptv=Ptu;
